johnlimadev/force-app/main/default/objects/Veiculo__c/Veiculo__c.object-meta.xml
<CustomObject>
    <label>Veículo</label>
    <nameField>
        <label>Nome do Veículo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veículo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>