johnlimadev/force-app/main/default/objects/Veiculo__c/fields/Revisao_em_dia__c.field-meta.xml
<CustomField>
    <fullName>Revisao_em_dia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisão em dia</label>
    <type>Checkbox</type>
</CustomField>