johnlimadev/force-app/main/default/objects/Veiculo__c/fields/UF__c.field-meta.xml
<CustomField>
    <fullName>UF__c</fullName>
    <inlineHelpText>Apenas a sigla do Estado</inlineHelpText>
    <label>UF</label>
    <length>3</length>
    <type>Text</type>
</CustomField>